# chat-clm

./: .env.dist  .gitignore  Cargo.toml  README.md  data.txt  faust.txt
src/: lib.rs
src/clm/: clm_model.rs  evaluate.rs  inference.rs  mod.rs  ngram_model.rs  tokenizer.rs  trainer.rs  training_options.rs  uniform_model.rs
training/: options.py  plot.py  pyproject.toml  wandb_runner.py
