[package]
name = "chatclm"
version = "0.1.0"
edition = "2024"


[profile.release]
debug = true

[dependencies]
zstd-sys = { version = "2.0.10", features = ["experimental", "zstdmt"] }
zstd = { version = "0.13.1" }
itertools = "0.14.0"
indicatif = "0.17.8"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
num = "0.4.3"
dotenv = "0.15.0"
unidecode = "0.3.0"
clap = { version = "4.5.38", features = ["derive"] }
chrono = "0.4.41"
rand = "0.9.1"
rayon = "1.10.0"
human_bytes = "0.4.3"
defer = "0.2.1"
